static/psi4manual/1.2.1/_sources/api/psi4.core.HF.rst.txt
HF
==

.. currentmodule:: psi4.core

.. autoclass:: HF
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~HF.V_potential
      ~HF.Va
      ~HF.Vb
      ~HF.cphf_Hx
      ~HF.cphf_converged
      ~HF.cphf_solve
      ~HF.finalize_E
      ~HF.form_C
      ~HF.form_D
      ~HF.form_F
      ~HF.form_G
      ~HF.form_V
      ~HF.functional
      ~HF.guess_Ca
      ~HF.guess_Cb
      ~HF.initialize
      ~HF.iterations
      ~HF.jk
      ~HF.occupation_a
      ~HF.occupation_b
      ~HF.onel_Hx
      ~HF.reset_occ
      ~HF.semicanonicalize
      ~HF.set_jk
      ~HF.set_sad_basissets
      ~HF.set_sad_fitting_basissets
      ~HF.twoel_Hx

   .. rubric:: Methods Documentation

   .. automethod:: V_potential
   .. automethod:: Va
   .. automethod:: Vb
   .. automethod:: cphf_Hx
   .. automethod:: cphf_converged
   .. automethod:: cphf_solve
   .. automethod:: finalize_E
   .. automethod:: form_C
   .. automethod:: form_D
   .. automethod:: form_F
   .. automethod:: form_G
   .. automethod:: form_V
   .. automethod:: functional
   .. automethod:: guess_Ca
   .. automethod:: guess_Cb
   .. automethod:: initialize
   .. automethod:: iterations
   .. automethod:: jk
   .. automethod:: occupation_a
   .. automethod:: occupation_b
   .. automethod:: onel_Hx
   .. automethod:: reset_occ
   .. automethod:: semicanonicalize
   .. automethod:: set_jk
   .. automethod:: set_sad_basissets
   .. automethod:: set_sad_fitting_basissets
   .. automethod:: twoel_Hx
